traefik/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-network-policy
  namespace: traefik
spec:
  # Default deny all traffic
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik-service
  policyTypes:
    - Ingress
    - Egress

  # ingress: {}
  # egress: {}
